# repository

./: README.md
1 SEM/Линейная алгебра и теория матриц/: Гневнов Артем Евгеньевич, ИВТ2.1., 3.1.20.docx
1 SEM/Физика/: Гневнов Артем ИВТ 2.1 ЛР 1.xlsx  Гневнов Артем ИВТ 2.1 ЛР 2.xlsx  Гневнов Артем ИВТ 2.1 ЛР 3.xlsx  Гневнов Артем ИВТ 2.1 ЛР 4.xlsx  Гневнов Артем, ИВТ 2.1 ЛР 5.xlsx
1 SEM/Философия/: Гневнов Артем Евгеньевич, 1 курс, ИВТ 2.1, ответы на вопросы 06.012.2022г.docx  Гневнов Артем Евгеньевич, ИВТ 2.1, реакция философов.pptx  Философия, Гневнов Артем Евгеньевич, 1 курс, ИВТ 2.1.rar
2 SEM/Теория вероятностей и комбинаторика/: Гневнов Артем Евгеньевич^J ИВТ2.1^J 6.3.8.docx
4 SEM/Английский 4 SEM/: Гневнов Артем Евгеньевич, Блез Паскаль.pptx  Гневнов Артем Евгеньевич^J Блез Паскаль.docx
4 SEM/Интегралы и дифференциальные уравнения/: Интегралы тест.docx
5 SEM/Информационные технологии в изучении иностранных языков/: Гневнов А.Е. Зачётное задание.docx
5 SEM/Программирование 5 SEM/ЛР№ 9/: pyproject.toml  readme.md
5 SEM/Программирование 5 SEM/ЛР№ 9/static/css/: style.css
5 SEM/Программирование 5 SEM/ЛР№ 9/templates/: bonus.html  index.html  login.html  register.html
6 SEM/Английский 6 SEM/: Гневнов А.Е. Многозначность.pptx  текст.md
6 SEM/Защита информации/: Конспект.md
7 SEM/Английский 7 SEM/: Гневнов А.Е, отработка английский 1.txt  Гневнов А.Е, отработка английский 5.txt  Гневнов А.Е, отработка английский 6.txt  (+1 more)
Практика 1 курс/Задание 10/: №10.docx
Практика 4 курс/: README.md  Гневнов А.Е., ВСР 2.1-2.3.docx  Гневнов А.Е., ИСР 1.1-1.3.docx
(+1269 files in other folders)
