[tool.poetry]
name = "lw9-bonus"
version = "0.1.0"
description = "LW9_Bonus_system"
authors = ["Artyom <gnevnov1996@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
flask = "^3.1.0"
flask-restx = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
